[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Koridor.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/DustParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/character/Character.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Level.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/soundtrack.ogg" type="AudioStream" id=5]
[ext_resource path="res://src/GUI/MenuPopup.gd" type="Script" id=6]
[ext_resource path="res://src/objects/Rigid_Cart.tscn" type="PackedScene" id=7]

[sub_resource type="Gradient" id=1]

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1024

[sub_resource type="Environment" id=3]
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.25
fog_enabled = true
fog_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
fog_depth_begin = 0.0
fog_depth_end = 7.0
fog_transmit_enabled = true
dof_blur_far_distance = 1.71
adjustment_enabled = true
adjustment_color_correction = SubResource( 2 )

[node name="Level" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0220826, 0.000685692, -0.000162125 )
script = ExtResource( 4 )

[node name="Character" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.807627, 0.259586, 2.29613 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Koridor" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000349998, -0.0222893, 3.99946 )

[node name="RedFadeOut" type="Tween" parent="."]

[node name="Particles" type="Spatial" parent="."]

[node name="DustParticles" parent="Particles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.162688, 0.941949, 0.580656 )

[node name="DustParticles2" parent="Particles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.33057, 3.8839, 1.16131 )

[node name="DustParticles3" parent="Particles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.39345, -3.76909, -0.777109 )

[node name="DustParticles4" parent="Particles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02626, -0.178937, 1.97469 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuPopup" type="Popup" parent="CanvasLayer"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
popup_exclusive = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MenuPopup"]
margin_right = 200.0
margin_bottom = 100.0
color = Color( 0.117647, 0.117647, 0.117647, 0.635294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeLabel" type="Label" parent="CanvasLayer/MenuPopup/ColorRect"]
margin_top = 20.0
margin_right = 200.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
text = "resume game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLabel" type="Label" parent="CanvasLayer/MenuPopup/ColorRect"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
text = "restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitLabel" type="Label" parent="CanvasLayer/MenuPopup/ColorRect"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
text = "quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Riogid_Cart" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.79998, -0.121109, -0.116342 )
